musica (2.20) unreleased; urgency=low

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 30 Jul 2011 11:15:26 -0500

musica (2.19-0ubuntu1) oneiric; urgency=low

  * debian/postinst:
    - immediately run an update

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 30 Jul 2011 11:15:22 -0500

musica (2.18-0ubuntu1) oneiric; urgency=low

  * index.php:
    - don't print broken images

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2011 23:56:25 -0500

musica (2.17-0ubuntu1) oneiric; urgency=low

  [ Serge Hallyn ]
  * debian/cron.hourly: add -L to find options to support symlinks under
    /usr/share/music/musica.

  [ Dustin Kirkland ]
  * jplayer.php: LP: #811477
    - use the google hosted jquery.min.js until the local one in Debian/Ubuntu
      gets fixed
  * debian/cron.hourly, index.php, jplayer.php:
    - partial support for m4a
  * debian/control, index.php:
    - remove that nasty backtick call to eyeD3, use php-id3 instead

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 29 Jul 2011 19:38:42 -0500

musica (2.16-0ubuntu1) oneiric; urgency=low

  * debian/cron.hourly, index.php: LP: #622294
    - VASTLY improve album and song search performance by using the cache
      files listing songs/albums
    - artist lookup is still fast enough doing the dir work, though could
      be changed too, easily
    - improve the cronjob that generates these to the correct format
  * index.php:
    - improve random artist/album/song support
    - drop the ratings support; don't really have a good, persistent place
      to store this
  * debian/cron.hourly, index.php:
    - fix image loading
    - improve performance
    - cache image list too
  * index.php:
    - fix popout, move control icons to top of song window

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 28 Jul 2011 20:23:14 -0500

musica (2.15-0ubuntu1) natty; urgency=low

  [ Jeff Lane ]
  * README: fix path, LP: #733659
